subiida al servidor

--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -40,7 +40,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="presented" class="form-control" placeholder="Fecha presentación">
+                                <input type="date" name="presented" class="form-control" placeholder="Fecha presentación">
                             </div>
 
                             <div class="form-group">
