--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -96,9 +96,18 @@ box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.75);
 
 /*****IMG_DESCRIPTION*****/
 #img-description{
-    width: 25rem;
+    width: 27rem;
     height: 18.5rem;
     border-radius: 30px;
     float: left;
+}
+
+/***Progress***/
+#progress{
+    width: 80%;
+    height: 40%;
+    font-size: 1rem; 
+    float: right;
+    overflow: auto;
 }
 
