--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -97,7 +97,7 @@
                 <div class="col-xl-9 col-sm-9 offset-md-3">
                   <hr id="separate">
                 </div>
-                <div class="col-xl-9 col-sm-9" style="font-size: 1rem; float: right;">
+                <div class="col-xl-9 col-sm-9" id="progress">
                   <p class="card-text"><b>Avance:</b></p>
                     <ul>
                       <% if(image.comments === ''){%>
