--- a/src/public/assets/css/background.css
+++ b/src/public/assets/css/background.css
@@ -12,3 +12,18 @@ body{
     box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.75);
 }
 
+a{
+    text-decoration: none;
+    color: black;
+    transition: color 0.2s ease-out;
+}
+
+a:hover{
+    text-decoration: none;
+    color: black;
+}
+
+img:hover{
+    opacity: 0.8;
+}
+
