--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
                 <a href="/pages/1">
                     <div class="card">
                         <div class="card-body">
-                            <button class="btn btn-info btn-block">Consulta Políticas</button>
+                            <button class="btn btn-info btn-block"><i class="fas fa-search"></i> Consulta Políticas</button>
                         </div>
                     </div>
                 </a>
