--- a/src/views/pagination.ejs
+++ b/src/views/pagination.ejs
@@ -13,16 +13,20 @@
         <div class="row">
             <div class="card-columns">
                 <%images.map(function(image){%>
+                  <a href="/image/<%= image._id %>">
                     <div class="card animated bounceInLeft">
                         <img src="<%= image.path %>" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title"><%= image.title %></h5>
+                            <h3 class="card-title text-center font-weight-bold"><%= image.title %></h3>
                             <p class="card-text"><%= image.description %></p>
-                            <p class="card-text"><%= format(image.created_at) %></p>
-                            <a href="/image/<%= image._id %>" class="btn btn-primary btn-block mb-2"><i class="fas fa-search"></i> Consulta Política</a>
-                            <a href="/edit/<%= image._id %>" class="btn btn-info "><i class="fas fa-pen"></i> Editar</a>
+                            <!--<p class="card-text"><%= format(image.created_at) %></p>-->
+                            <h5 class="card-text"><%= image.status %></h5>
+                            <div class="card-footer bg-transparent mt-2">
+                                <a href="/edit/<%= image._id %>" class="btn btn-info"><i class="fas fa-pen"></i> Editar</a>
+                            </div>
                         </div>
                     </div>
+                  </a>
                 <% })%>
             </div>
         </div>
