--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #051c48;">
-    <a class="navbar-brand" href="/pages/1">Políticas Públicas</a>
+    <a class="navbar-brand" href="/">Políticas Públicas</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
