cambios con buscador y filtro

--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -32,7 +32,23 @@
                               </div>
 
                               <div class="form-group">
-                                <input type="text" name="axis" class="form-control" placeholder="Eje">
+                                <select name="axis" class="custom-select" id="axis" required>
+                                  <option selected>Eje...</option>
+                                  <option>Desarrollo Social</option>
+                                  <option>Salud</option>
+                                  <option>Educación</option>
+                                  <option>Cultura</option>
+                                  <option>Gobierno</option>
+                                  <option>Economía e Infraestructura</option>
+                                  <option>Corrupción</option>
+                                  <option>Austeridad</option>
+                                  <option>Seguridad</option>
+                                  <option>Energía</option>
+                                  <option>Medio Ambiente</option>
+                                  <option>Telecomunicaciones</option>
+                                  <option>Derechos y Programas Sociales</option>
+                                  <option>Relaciones Exteriores</option>
+                                </select>    
                             </div>
 
                             <div class="form-group">
@@ -62,7 +78,7 @@
                             </div>
 
                             <div class="form-group">
-                                <textarea type="text" rows="4" cols="50" name="comments" class="form-control" placeholder="Comentarios"></textarea>
+                                <textarea type="text" rows="4" cols="50" name="comments" class="form-control" placeholder="Avances"></textarea>
                             </div>
 
                               <div class="form-group">
