--- a/src/public/assets/css/background.css
+++ b/src/public/assets/css/background.css
@@ -6,6 +6,10 @@ body{
     text-align: justify;
 }
 
+.status{
+    border-radius: 20px;
+}
+
 .card:hover{
     -webkit-box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.75);
@@ -26,4 +30,3 @@ a:hover{
 img:hover{
     opacity: 0.8;
 }
-
