--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -48,6 +48,7 @@
                         <img src="<%= image.path %>" class="card-img-top" alt="">
                         <div class="card-body">
                             <h3 class="card-title text-center font-weight-bold"><%= image.title %></h3>
+                            <!--<p class="card-text"><%= format(image.created_at) %></p>-->
                             <% if(image.status === 'Sin iniciar'){%>
                               <h5 class="card-text text-center status" style="background-color: #e8e8e8"><%= image.status %></h5>
                             <%} else if(image.status === 'Rota'){%>
@@ -57,7 +58,6 @@
                             <%} else if(image.status === 'Cumplida'){%>
                               <h5 class="card-text text-center status" style="background-color: #a8e6cf"><%= image.status %></h5>
                             <%}%>
-                            <!-- <h5 class="card-text"><%= image.status %></h5> -->
                             <div class="card-footer bg-transparent mt-2">
                                 <a href="/edit/<%= image._id %>" class="btn btn-info"><i class="fas fa-pen"></i> Editar</a>
                             </div>
@@ -68,67 +68,3 @@
             </div>
         </div>
     </div>
-    
-    <div class="row">
-        <!-- pagination -->
-        <% if(pages > 0) { %> <!-- show pagination if there is pages -->
-          <nav class="mx-auto">
-            <ul class="pagination">
-              <!-- FIRST ITEM -->
-              <% if(current == 1) { %>
-                <li class="page-item disabled">
-                  <a class="page-link" href="#">Inicio</a>
-                </li>
-              <% } else { %>
-                <li class="page-item">
-                  <a class="page-link" href="/pages/1">Inicio</a>
-                </li>
-              <% } %>
-              <!-- ITEMS  -->
-              <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
-              <% if(i !== 1) { %>
-                <li class="page-item disabled">
-                  <a class="page-link" href="#">...</a>
-                </li>
-              <% } %>
-              <% for(; i <= (Number(current) + 4) && i <= pages; i++) { %>
-                <% if(i == current) { %>
-                  <li class="page-item active">
-                    <a class="page-link" href="<%= i %>">
-                      <%= i %>
-                    </a>
-                  </li>
-                <% } else { %>
-                  <li class="page-item">
-                    <a class="page-link" href="/pages/<%= i %>">
-                      <%= i %>
-                    </a>
-                  </li>
-                <% } %>
-                <% if (i == Number(current) + 4 && i < pages) { %>
-                   <li class="page-item disabled">
-                     <a class="page-link" href="#">...</a>
-                   </li>
-                <% } %>
-              <% } %>
-              <!-- LAST ITEM -->
-              <% if(current == pages) { %>
-                <li class="page-item disabled">
-                  <a class="page-link" href="#">
-                    Fin
-                  </a>
-                </li>
-              <% } else { %>
-                <li class="page-item">
-                  <a class="page-link" href="/pages/<%= pages %>">
-                    Fin
-                  </a>
-                </li>
-              <% } %>
-            </ul>
-          </nav>
-        <% } %>
-      </div>
-    </div>
-</body>
-</html>
