--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -18,7 +18,7 @@
 
                             <div class="input-group mb-3">
                                 <div class="custom-file">
-                                    <input type="file" name="image" class="custom-file-input" id="inputGroupFile02">
+                                    <input type="file" name="image" class="custom-file-input" id="inputGroupFile02" autofocus>
                                     <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Selecciona imagen</label>
                                 </div>
                             </div>
