--- a/src/views/pagination.ejs
+++ b/src/views/pagination.ejs
@@ -42,7 +42,7 @@
     <div class="container p-4 mt-2">
         <div class="row">
             <div class="card-columns">
-                <%images.map(function(image){%>
+                <%images.map(function(image, index){%>
                   <a href="/image/<%= image._id %>">
                     <div class="card animated bounceInLeft">
                         <img src="<%= image.path %>" class="card-img-top" alt="">
