--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -30,8 +30,8 @@
               <div class="col-md-3">
                 <div class="card text-center data">
                   <div class="card-body">
-                    <h5 class="card-title font-weight-bold">Fecha de presentación</h5>
-                    <p class="card-text text-uppercase"><%= image.presented.toDateString() %></p>
+                    <h5 class="card-title font-weight-bold">Fecha de presentación (mes/AÑO)</h5>
+                    <p class="card-text text-uppercase"><%= image.presented.getUTCMonth() + 1 %> / <%= image.presented.getUTCFullYear() %></p>
                   </div>
                 </div>
               </div>
