--- a/src/views/filter.ejs
+++ b/src/views/filter.ejs
@@ -36,6 +36,11 @@
             <button class="btn btn-info btn-block"><i class="fas fa-filter"></i></i> Cumplidas</button>
           </a>
       </div>
+      <div class="col-2">
+        <a href="/percentage">
+          <button class="btn btn-info btn-block"><i class="fas fa-filter"></i></i> Porcentajes</button>
+        </a>
+    </div>
       </div>
     </div>
   </div>
