--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -18,17 +18,17 @@
 
                             <div class="input-group mb-3">
                                 <div class="custom-file">
-                                    <input type="file" name="image" class="custom-file-input" id="inputGroupFile02" autofocus>
+                                    <input type="file" name="image" class="custom-file-input" id="inputGroupFile02" autofocus required>
                                     <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Selecciona imagen</label>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="text" name="title" placeholder="Título" class="form-control">
+                                <input type="text" name="title" placeholder="Título" class="form-control" required>
                             </div>
     
 
                               <div class="form-group">
-                                  <input type="text" name="description" class="form-control" placeholder="Descripción">
+                                  <input type="text" name="description" class="form-control" placeholder="Descripción" required>
                               </div>
 
                               <div class="form-group">
@@ -62,7 +62,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="date" name="presented" class="form-control" placeholder="Fecha presentación">
+                                <input type="date" name="presented" class="form-control" placeholder="Fecha presentación" required>
                             </div>
 
                             <div class="form-group">
