--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,19 +10,14 @@
 </head>
 <body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <img src="/assets/img/portada.jpeg" alt="">
-        </div>
-      </div>
-    </div>
+      
     <div class="container p-4 mt-5 text-center animated bounceInLeft">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <a href="/pages/1">
                     <div class="card">
                         <div class="card-body">
-                            <button class="btn btn-info btn-block"><i class="fas fa-search"></i> Consulta Todas las Políticas</button>
+                            <button class="btn btn-info btn-block"><i class="fas fa-list-ul"></i> Consulta Todas las Políticas</button>
                         </div>
                     </div>
                 </a>
