--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -20,15 +20,15 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item active mr-5">
-        <a class="nav-link" href="/upload"><i class="fas fa-plus"></i>  Agregar Nueva Política<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/upload"><i class="fas fa-plus"></i>  Añadir<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item disabled ">
         <a class="nav-link" href="#">DIFA</a>
       </li>
     </ul>
     <form method="GET" action="/search" class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Política..." name="title" aria-label="Search">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Palabra clave..." name="title" aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i> Buscar</button>
     </form>
   </div>
   </nav>
