--- a/src/views/filter.ejs
+++ b/src/views/filter.ejs
@@ -38,7 +38,7 @@
       </div>
       <div class="col-2">
         <a href="/percentage">
-          <button class="btn btn-info btn-block"><i class="fas fa-filter"></i></i> Porcentajes</button>
+          <button class="btn btn-info btn-block"><i class="fas fa-filter"></i></i> Ver Cifras</button>
         </a>
     </div>
       </div>
