--- a/src/public/assets/css/background.css
+++ b/src/public/assets/css/background.css
@@ -37,3 +37,9 @@ table{
     border-radius: 0.8em;
     overflow: hidden;
 }
+
+canvas {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
