con cambios de Gasca

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,7 +14,7 @@
     <div class="container p-4 mt-5 text-center animated bounceInLeft">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <a href="/pages/1">
+                <a href="/percentage">
                     <div class="card">
                         <div class="card-body">
                             <button class="btn btn-info btn-block"><i class="fas fa-list-ul"></i> Consulta Todas las Políticas</button>
