--- a/src/views/percentage.ejs
+++ b/src/views/percentage.ejs
@@ -82,7 +82,7 @@
     <% cont10 = (cont5*100)/cont5 %>
   <%})%>
 
-  <div class="container mt-5 text-center animated bounceInUp">
+  <div class="container mt-3 text-center animated bounceInUp">
       <div class="row">
           <div class="col-md-12">
             <table class="table">
@@ -125,7 +125,7 @@
       </div>
   </div>
 
-  <div class="container" style="width: 45%;">
+  <div class="container p-3" id="graph-card">
 		<canvas id="canvas"></canvas>
   </div>
 
