--- a/src/public/assets/css/background.css
+++ b/src/public/assets/css/background.css
@@ -38,6 +38,18 @@ table{
     overflow: hidden;
 }
 
+/******GRAPHS******/
+
+#graph-card{
+    -webkit-box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 3px 9px -1px rgba(0,0,0,0.75);
+    border-collapse: collapse;
+    border-radius: 0.8em;
+    overflow: hidden;
+    width: 45%;
+}
+
 canvas {
     -moz-user-select: none;
     -webkit-user-select: none;
