--- a/src/views/filter.ejs
+++ b/src/views/filter.ejs
@@ -65,6 +65,7 @@
                             <%}%>
                             <div class="card-footer bg-transparent mt-2">
                                 <a href="/edit/<%= image._id %>" class="btn btn-info"><i class="fas fa-pen"></i> Editar</a>
+                                <a href="/delete/<%= image._id %>" class="btn m-1" id="btn-delete"><i class="far fa-trash-alt"></i> Eliminar</a>
                             </div>
                         </div>
                     </div>
