--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -66,19 +66,19 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="tweets" class="form-control" placeholder="Tweets">
+                                <input type="text" name="tweets" class="form-control" placeholder="Tendencias generadas" onkeyup="format(this)" onchange="format(this)" required>
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="radio" class="form-control" placeholder="Radio">
+                                <input type="text" name="radio" class="form-control" placeholder="Radio y TV" onkeyup="format(this)" onchange="format(this)" required>
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="tv" class="form-control" placeholder="TV">
+                                <input type="text" name="tv" class="form-control" placeholder="Prensa y portales" required>
                             </div>
 
                             <div class="form-group">
-                                <textarea type="text" rows="4" cols="50" name="comments" class="form-control" placeholder="Avances"></textarea>
+                                <textarea type="text" rows="4" cols="50" name="comments" class="form-control" placeholder="Avances" required></textarea>
                             </div>
 
                               <div class="form-group">
@@ -92,5 +92,8 @@
             </div>
         </div>
     </div>
+
+<script src="/assets/js/format.js"></script>
+
 </body>
 </html>
