--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -16,12 +16,6 @@
                 <div class="card-body">
                     <form action="/edit/<%=  image._id %>" method="POST" enctype="multipart/form-data">
 
-                        <div class="input-group mb-3">
-                            <div class="custom-file">
-                                <input type="file" name="image" class="custom-file-input" id="inputGroupFile02" autofocus required>
-                                <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Selecciona imagen</label>
-                            </div>
-                        </div>
 
                         <div class="form-group">
                             <label for="title">Título:</label>
@@ -61,12 +55,12 @@
 
                         <div class="form-group">
                             <label for="radio">Radio y TV:</label>
-                            <input type="text" name="radio" class="form-control" placeholder="Radio" value="<%= image.radio %>" required>
+                            <input type="text" name="radio" class="form-control" placeholder="Radio" value="<%= image.radio %>" onkeyup="format(this)" onchange="format(this)" required>
                         </div>
 
                         <div class="form-group">
                             <label for="tv">Prensa y portales:</label>
-                            <input type="text" name="tv" class="form-control" placeholder="Prensa y portales" value="<%= image.tv %>" required>
+                            <input type="text" name="tv" class="form-control" placeholder="Prensa y portales" value="<%= image.tv %>" onkeyup="format(this)" onchange="format(this)" required>
                         </div>
 
                         <div class="form-group">
