--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -74,7 +74,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="tv" class="form-control" placeholder="Prensa y portales" required>
+                                <input type="text" name="tv" class="form-control" placeholder="Prensa y portales" onkeyup="format(this)" onchange="format(this)" required>
                             </div>
 
                             <div class="form-group">
